--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-scale": "^2.1.0",
     "dc": "^2.0.0",
     "diff": "^3.2.0",
+    "gettext-parser": "^4.0.0",
     "grid-styled": "^4.1.0",
     "history": "3",
     "humanize-plus": "^1.8.1",
